<resources>
    <string name="app_name">TakeStock</string>
    <string name="search_products">Search Products</string>
    <string name="browse_categories"><![CDATA[Browse Categories >]]></string>
    <string name="sell_something">Sell Something</string>
    <string name="home">home</string>
    <string name="add_photo">Add photo</string>
    <string name="choose_unit">Choose unit / action of packaging</string>
    <string name="how_many_unit">How many [unit] are for sale?</string>
    <string name="hint_add_product_title">Add product title</string>
    <string name="kg">kg</string>
    <string name="minimum_order">Minimum order</string>
    <string name="guide_price">Guide price</string>
    <string name="product_description">Product description*</string>
    <string name="hint_product_description">Great tasting Chocolate Brownie Mix. Mix with Water and Butter for a luxury
        product. Recipe supplied with order …
    </string>
    <string name="hint_location">Brighton</string>
    <string name="location">Location*</string>
    <string name="shipping">Shipping*</string>
    <string name="condition">Condition*</string>
    <string name="certification">Certification</string>
    <string name="iso">ISO</string>
    <string name="organic">Organic</string>
    <string name="bsi">BSI</string>
    <string name="salsa">Salsa</string>
    <string name="brc">BRC</string>
    <string name="hint_other_certification_extra">Other certification extra</string>
    <string name="keywords">Keywords</string>
    <string name="hint_keywords">bargain, ingredients…</string>
    <string name="hint_keywords_description">List as many as you like. Keywords help customers find your product
    </string>
    <string name="preview_ad"><![CDATA[Preview & make live]]></string>
    <string name="save">Save</string>
    <string name="expiry">Expiry</string>
    <string name="size">Size</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="slogan">Unlocking value\nin the food industry</string>
    <string name="sign_in">Sign in</string>
    <string name="back">back</string>
    <string name="action_settings">Settings</string>
    <string name="qty_available">Qty available</string>
    <string name="per_packaging">/ %1$s</string>
    <string name="password">Password</string>
    <string name="user_name_or_email">Username or email</string>
    <string name="title_activity_login">Sign in</string>
    <string name="offer_price_per_kg">£%1$s/%2$d kg</string>
    <string name="add_expiry_date">Add expiry date</string>
    <string name="error_unknown">Unknown error.</string>
    <string name="error_incorrect_credentials">Unable to login with provided credentials.</string>
    <string name="error_no_network_connection">There is no network connection right now.</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_incorrect_email">Email address is incorrect</string>
    <string name="error_user_exists">A author with that username already exists.</string>
    <string name="error_no_camera_app">Need camera app.</string>
    <string name="error_photo">Processing photo failed.</string>
    <string name="count_results_for">%1$d results for</string>
    <string name="categories">Categories</string>
    <string name="minimum_order_kg">%1$d kg</string>
    <string name="qty_available_kg">%1$d kg</string>
    <string name="available_kg">%1$d kg available</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="error_empty_size">Please, add size.</string>
    <string name="offers">Offers</string>
    <string name="offer">Offer</string>
    <string name="settings">Settings</string>
    <string name="new_to_takestock">New to Takestock?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_connection">No connection</string>
    <string name="retry">Retry</string>
    <string name="questions">Questions</string>
    <string name="accept">Accept</string>
    <string name="counter">Counter</string>
    <string name="reject">Reject</string>
    <string name="answer">Answer</string>
    <string name="reject_offer">Reject offer</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="delete_photo">Delete photo</string>
    <string name="edit_advert">Edit advert</string>
    <string name="help_guide">There are detailed selling guides and best practice on our main website at</string>
    <string name="help_questions_message">If you have any questions about using our app you can message us</string>
    <string name="admin_email">admin@wetakestock.com</string>
    <string name="send_question">Send question…</string>
    <string name="about_takestock">\tMany businesses in large distributed industries have a problem with stock being
        unwanted in one location and desired somewhere else. Takestock.com was created to be an online trading platform
        to make it easy for owners of stock to sell their unwanted items and to find a buyer efficiently rather than
        turning to scrap as an option. Takestock is initially focussing on the food manufacturing and agricultural
        sectors where 600,000 tonnes of food are wasted each year in the UK alone. \n\n\tWe are an eCommerce platform
        and believe the future solution to distributed unwanted stock is an e market place. That is why we do not
        advertise on behalf of brands, publish content or produce editorials for the trades we operate in. We focus on
        trading and helping you turn unwanted stock into cash. Takestock was set up by 4 founders who have a wide range
        of experience across multiple tech and food sectors. We think it is unacceptable that nearly £1Bn in food is
        wasted each year in the UK and we intend to make an impact on that at Takestock.
    </string>
    <string name="select">Select</string>
    <string name="my_business">My business</string>
    <string name="business_name">Business name</string>
    <string name="type_of_business">Type of business</string>
    <string name="business_subtype">Subtype</string>
    <string name="postcode">Postcode</string>
    <string name="vat_registered">I am VAT registered</string>
    <string name="vat_number">VAT number</string>
    <string name="payment_details">Payment details</string>
    <string name="credit_card">0000 0000 0000 0000</string>
    <string name="error_shipping">Shipping not selected.</string>
    <string name="error_condition">Condition not selected.</string>
    <string name="keyword">Keyword</string>
    <string name="add">Add</string>
    <string name="add_payment">Add payment</string>
    <string name="advert_create_toolbar_title_create">Create advert</string>
    <string name="advert_create_toolbar_title_edit">Edit advert</string>
    <string name="advert_create_product_title">Product title*</string>
    <string name="advert_create_add_product_title">Add product title</string>
    <string name="advert_create_category">Category*</string>
    <string name="advert_create_subcategory">Subcategory*</string>
    <string name="advert_create_quantities_and_guide_price">Quantities and guide price*</string>
    <string name="advert_create_chose_unit">Choose unit / action of packaging</string>
    <string name="advert_create_how_many_unit">How many [unit] are for sale?</string>
    <string name="advert_create_minimum_order">Minimum order</string>
    <string name="advert_create_guide_price">Guide price</string>
    <string name="advert_create_product_description">Product description*</string>
    <string name="advert_create_hint_product_description">Great tasting Chocolate Brownie Mix. Mix with Water and Butter
        for a luxury product. Recipe supplied with order…
    </string>
    <string name="advert_create_location">Location*</string>
    <string name="advert_create_hint_location">Brighton</string>
    <string name="advert_create_shipping">Shipping*</string>
    <string name="advert_create_condition">Condition*</string>
    <string name="advert_create_expiry">Expiry*</string>
    <string name="advert_create_expiry_date">%1$d/%2$d/%3$d</string>
    <string name="advert_create_add_expiry_date">Add expiry date</string>
    <string name="advert_create_size">Size</string>
    <string name="advert_create_certification">Certification*</string>
    <string name="advert_create_hint_other_certification_extra">List any other certifications</string>
    <string name="advert_create_keywords">Keywords</string>
    <string name="advert_create_add_keyword">Add keyword</string>
    <string name="advert_create_hint_keywords">List as many as you like. Keywords help customers find your product
    </string>
    <string name="advert_create_preview_and_make_live"><![CDATA[Preview & make live]]></string>
    <string name="advert_create_save">Save</string>
    <string name="advert_create_error_photo">Photo not added</string>
    <string name="advert_create_error_title">Product title not added</string>
    <string name="advert_create_error_category">Category not selected</string>
    <string name="advert_create_error_subcategory">Subcategory not selected</string>
    <string name="advert_create_error_item_count">Unit amount not added</string>
    <string name="advert_create_error_minimum_order">Minimum order not added</string>
    <string name="advert_create_error_guide_price">Guide price not added</string>
    <string name="advert_create_error_description">Description not added</string>
    <string name="advert_create_error_location">Location not added</string>
    <string name="advert_create_error_expiry_date">Expiry date not added</string>
    <string name="advert_create_error_certification">Certification not picked</string>
    <string name="advert_create_error_certification_extra">Certification extra not added</string>
    <string name="advert_create_select_one">Select one</string>
    <string name="advert_create_advert_saved">Advert saved in drafts</string>
    <string name="advert_editor_live">Live</string>
    <string name="advert_editor_on_hold">On hold</string>
    <string name="advert_editor_sold_out">Sold out</string>
    <string name="advert_editor_state">Advert state</string>
    <string name="advert_preview_guide_price">Guide price</string>
    <string name="advert_preview_minimum_order">Minimum order</string>
    <string name="advert_preview_qty_available">Qty available</string>
    <string name="advert_preview_description">Description</string>
    <string name="advert_preview_category">Category</string>
    <string name="advert_preview_location">Location</string>
    <string name="advert_preview_shipping">Shipping</string>
    <string name="advert_preview_expiry">Expiry</string>
    <string name="advert_preview_certification">Certification</string>
    <string name="advert_preview_condition">Condition</string>
    <string name="adverts_sort_created_at">Created at</string>
    <string name="adverts_sort_created_at_descending">Created at (descending)</string>
    <string name="adverts_sort_expires_at">Expires at</string>
    <string name="adverts_sort_expires_at_descending">Expires at (descending)</string>
    <string name="adverts_sort_guide_price">Guide price</string>
    <string name="adverts_sort_guide_price_descending">Guide price (descending)</string>
    <string name="navigation_drawer_profile">Profile</string>
    <string name="navigation_drawer_notifications">Notifications</string>
    <string name="navigation_drawer_my_takestock">My Takestock</string>
    <string name="navigation_drawer_buying">Buying</string>
    <string name="navigation_drawer_watching">Watching</string>
    <string name="navigation_drawer_selling">Selling</string>
</resources>