<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_feature"
           android:checkableBehavior="none">
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/navigation_drawer_profile"/>
        <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_notifications_black_24dp"
                android:title="@string/navigation_drawer_notifications"/>

        <item
                android:id="@+id/my_takestock"
                android:title="@string/navigation_drawer_my_takestock">
            <menu>
                <item
                        android:id="@+id/nav_selling"
                        android:icon="@drawable/ic_local_offer_black_24dp"
                        android:title="@string/navigation_drawer_selling"/>
                <item
                        android:id="@+id/nav_buying"
                        android:icon="@drawable/ic_purchase_black_24dp"
                        android:title="@string/navigation_drawer_buying"/>
                <item
                        android:id="@+id/nav_watching"
                        android:icon="@drawable/ic_eye_black_24dp"
                        android:title="@string/navigation_drawer_watching"/>
            </menu>
        </item>
    </group>

    <!--<group android:id="@+id/group_settings"-->
           <!--android:checkableBehavior="none">-->

        <!--<item-->
                <!--android:id="@+id/nav_settings"-->
                <!--android:icon="@drawable/ic_settings_black_24dp"-->
                <!--android:title="@string/settings"/>-->

        <!--<item-->
                <!--android:id="@+id/nav_help_and_contact"-->
                <!--android:icon="@drawable/ic_question_black_24dp"-->
                <!--android:title="@string/help_and_contact"/>-->
    <!--</group>-->

</menu>