<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="16dp"
              android:paddingBottom="16dp"
              android:elevation="2dp"
              android:background="@color/white">

    <TextView
            android:id="@+id/expires_at_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SortTextView"
            android:text="@string/adverts_sort_expires_at"/>

    <TextView
            android:id="@+id/expires_at_descending_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SortTextView"
            android:text="@string/adverts_sort_expires_at_descending"/>

    <TextView
            android:id="@+id/created_at_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SortTextView"
            android:text="@string/adverts_sort_created_at"/>

    <TextView
            android:id="@+id/created_at_descending_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SortTextView"
            android:text="@string/adverts_sort_created_at_descending"/>

    <TextView
            android:id="@+id/guide_price_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SortTextView"
            android:text="@string/adverts_sort_guide_price"/>

    <TextView
            android:id="@+id/guide_price_descending_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SortTextView"
            android:text="@string/adverts_sort_guide_price_descending"/>

</LinearLayout>